# edifact-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/edifact-rs/: Cargo.toml
crates/edifact-rs-derive/: Cargo.toml
crates/edifact-rs-derive/src/: lib.rs
crates/edifact-rs-derive/tests/ui/: fail_composite_on_message.rs  fail_composite_on_message.stderr  fail_composite_with_component.rs  fail_composite_with_component.stderr  fail_enum.rs  fail_enum.stderr  fail_generic_struct.rs  fail_generic_struct.stderr  fail_group_on_segment_struct.rs  fail_group_on_segment_struct.stderr  fail_group_requires_vec.rs  fail_group_requires_vec.stderr  fail_group_with_composite.rs  fail_group_with_composite.stderr  fail_group_with_positioning.rs  fail_group_with_positioning.stderr  fail_invalid_segment_tag.rs  fail_invalid_segment_tag.stderr  fail_message_field_element_position.rs  fail_message_field_element_position.stderr  fail_qualifier_conflict.rs  fail_qualifier_conflict.stderr  fail_qualifier_from_invalid_format.rs  fail_qualifier_from_invalid_format.stderr  fail_qualifier_from_without_segment.rs  fail_qualifier_from_without_segment.stderr  fail_qualifier_without_segment.rs  fail_qualifier_without_segment.stderr  fail_segment_field_qualifier.rs  fail_segment_field_qualifier.stderr  fail_segment_qualifier_element_zero_conflict.rs  fail_segment_qualifier_element_zero_conflict.stderr  fail_tuple_struct.rs  fail_tuple_struct.stderr  fail_unknown_field_attr_key.rs  fail_unknown_field_attr_key.stderr  fail_unknown_struct_attr_key.rs  fail_unknown_struct_attr_key.stderr  pass_composite_optional.rs  pass_deny_warnings_generated.rs  (+6 more)
crates/edifact-rs/benches/: README.md  bench_core.rs  bench_criterion.rs  bench_data.rs
crates/edifact-rs/benches/baselines/: .gitignore
crates/edifact-rs/benches/baselines/parser/1mb/1000250/m5/: benchmark.json  estimates.json  (+2 more)
crates/edifact-rs/benches/baselines/reader/1mb/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/reader/parse_reader_chunked/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/validation/parse_large_message/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/validation/validate_large_message/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/validation/validate_profile_composed_packs/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/validation/validate_profile_custom_pack/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/validation/validate_structure_d11a/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/benches/baselines/writer/sample_d11a_message/m5/: benchmark.json  estimates.json  sample.json  tukey.json
crates/edifact-rs/examples/: bench_large_message_memory.rs  cookbook_async_tokio_integration.rs  cookbook_diagnostics.rs  cookbook_fixture_validation.rs  cookbook_message_window_streaming.rs  cookbook_parse_map_validate_write.rs  cookbook_profile_error_mapping.rs  cookbook_profile_packs.rs  cookbook_streamed_progressive_validation.rs  cookbook_typed_derive.rs  cookbook_typed_streaming.rs
crates/edifact-rs/src/: de.rs  directory_validator.rs  envelope.rs  error.rs  event.rs  lib.rs  model.rs  parser.rs  ser.rs  tokenizer.rs  validator.rs  writer.rs
crates/edifact-rs/tests/: bolero_harness.rs  derive_deserialize_strict.rs  diagnostics_snapshots.rs  directory_validator_conformance.rs  profile_packs.rs  profile_validation.rs  validation.rs
crates/edifact-rs/tests/fixtures/: d01b_invoic_conforming.edi  d01b_invoic_malformed.edi  d01b_orders_conforming.edi  d01b_orders_malformed.edi  d11a_conforming.edi  d11a_malformed.edi  d11a_malformed_component.edi  d96a_invoic_conforming.edi  d96a_invoic_malformed.edi  d96a_orders_conforming.edi  d96a_orders_malformed.edi  invoic_conforming.edi
crates/edifact-rs/tests/snapshots/: profile_orders_demo_report.txt
(+28 files in other folders)
