[package]
name        = "edifact-rs-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive macros for EdifactSerialize / EdifactDeserialize (from edifact-rs)"
readme = "../../README.md"
repository = "https://github.com/hupe1980/edifact-rs"
homepage = "https://github.com/hupe1980/edifact-rs"
documentation = "https://docs.rs/edifact-rs-derive"
keywords = ["edifact", "edi", "derive", "proc-macro", "serde"]
categories = ["encoding", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
